<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="@string/setting_category_account"
		>
		<PreferenceScreen
			android:key="setting_mail"
			android:title="@string/setting_mail"
			>
		</PreferenceScreen>
		<PreferenceScreen
			android:key="setting_device_id"
			android:title="@string/setting_device_id"
			>
		</PreferenceScreen>
		<PreferenceScreen
			android:key="setting_version"
			android:title="@string/setting_version"
			>
		</PreferenceScreen>
		<PreferenceScreen
			android:key="setting_release_date"
			android:title="@string/setting_release_date"
			>
		</PreferenceScreen>
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/setting_category_setting"
		>
		<CheckBoxPreference
			android:key="setting_auto_upload"
			android:title="@string/setting_auto_upload"
			android:summaryOff="@string/setting_auto_upload_close"
			android:summaryOn="@string/setting_auto_upload_open"
			>
		</CheckBoxPreference>
		<PreferenceScreen
			android:key="setting_disk_space"
			android:title="@string/setting_disk_space"
			>
		</PreferenceScreen>
		<ListPreference
			android:key="setting_keep_day"
			android:title="@string/title_send_folder_keep"
			android:summary="@string/message_send_folder_keep"
			android:entries="@array/keep_day_entry"
			android:entryValues="@array/keey_kay_value"
			android:dialogTitle="@string/title_send_folder_keep"
			>
		</ListPreference>
		<PreferenceScreen
			android:key="setting_legal_privacy"
			android:title="@string/setting_legal_privacy"
			>
		</PreferenceScreen>
		<PreferenceScreen
			android:key="setting_erase"
			android:title="@string/title_erase_offline"
			android:summary="@string/message_erase_offline"
			>
		</PreferenceScreen>
		<PreferenceScreen
			android:key="setting_logout"
			android:title="@string/title_logout"
			>
		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>